// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalResult renders approval result with error type 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#D738471A",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <SvgMock
          color="#d73847"
          height={24}
          name="Warning"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        >
          Icon
        </SvgMock>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Bold",
            "fontSize": 18,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Error
      </Text>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
          }
        }
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "paddingBottom": 16,
          "textAlign": "center",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Error message
      </Text>
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          OK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`ApprovalResult renders approval result with success type 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#1C82341A",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <SvgMock
          color="#1c8234"
          height={24}
          name="Confirmation"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        >
          Icon
        </SvgMock>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Bold",
            "fontSize": 18,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Success
      </Text>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
          }
        }
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
          "paddingBottom": 16,
          "textAlign": "center",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Success message
      </Text>
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#0376c9",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          OK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
